--- a/requirements.txt
+++ b/requirements.txt
@@ -199,7 +199,7 @@ rfc3986-validator==0.1.1
 rich==12.6.0
 rsa==4.9
 schemdraw==0.15
-scikit-learn==1.2.0
+scikit-learn >=0.20.0<1.2.0
 scikit-plot==0.3.7
 scipy==1.5.4
 seaborn==0.12.1
